tests/snapshots/ttml_generation_integration_tests__auto_word_splitting_snapshot.snap
---
source: lyrics_helper_rs/tests/ttml_generation_integration_tests.rs
expression: ttml_output
---
<tt xmlns="http://www.w3.org/ns/ttml"
    xmlns:itunes="http://music.apple.com/lyric-ttml-internal"
    xmlns:ttm="http://www.w3.org/ns/ttml#metadata"
    itunes:timing="Word">
  <head>
    <metadata>
      <ttm:agent type="person" xml:id="v1"/>
    </metadata>
  </head>
  <body dur="5.000">
    <div begin="1.000" end="5.000">
      <p begin="1.000" end="5.000" itunes:key="L1" ttm:agent="v1">
        <span begin="1.000" end="2.527">Split</span>
        <span begin="2.527" end="3.748">this</span>
        <span begin="3.748" end="3.779">,</span>
        <span begin="3.779" end="4.084">你</span>
        <span begin="4.084" end="4.389">好</span>
        <span begin="4.389" end="4.695">世</span>
        <span begin="4.695" end="5.000">界</span>
      </p>
    </div>
  </body>
</tt>
